# CMakeDemo

./: CMakeLists.txt  main.cpp
contrib/hello_cmake/: CMakeLists.txt
contrib/hello_cmake/include/: hello_cmake.h
contrib/hello_cmake/src/: hello_cmake.cpp
src/: CMakeLists.txt  run_hello_cmake.cpp  run_hello_cmake.h
